<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_dialog_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_limit"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryBlue"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_aware"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/edit_dialog_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimaryBlue"
        android:hint="@string/limit"/>

</LinearLayout>