<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.akitektuo.smartlist.activity.SettingsActivity">

    <RelativeLayout
        android:id="@+id/layout_settings_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryBlue"
        android:elevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/back_white" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_settings_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textColor="@color/colorPrimaryBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_status" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_settings_0"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDarkBlue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/switch_settings_recommendations"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_settings_recommendations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recommendations"
                        android:textColor="@color/colorPrimaryBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_settings_recommendations_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recommendations_status" />

                </LinearLayout>

                <!--<Switch-->
                    <!--android:visibility="invisible"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_centerVertical="true" />-->

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switch_settings_recommendations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:kswTintColor="@color/colorAccentBlue"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/image_settings_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDarkBlue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_fill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/switch_settings_fill"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_settings_fill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fill"
                        android:textColor="@color/colorPrimaryBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_settings_fill_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fill_status" />

                </LinearLayout>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switch_settings_fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:kswTintColor="@color/colorAccentBlue"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/image_settings_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDarkBlue" />

            <LinearLayout
                android:id="@+id/layout_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_settings_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textColor="@color/colorPrimaryBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_status" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_settings_3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDarkBlue" />

            <LinearLayout
                android:id="@+id/layout_excel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_settings_excel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/excel"
                    android:textColor="@color/colorPrimaryBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/excel_status" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_settings_4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDarkBlue" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
